scenarios/rate-limiting/app-gym.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gym-app
  labels:
    type: gym-webapp
    app: gymtest
spec:
  template:
    metadata:
      name: gym-pod
      labels:
        type: gym-webapp
    spec:
      containers:
        - name: mywebapp
          image: 8072388539/gymapp:v1
          ports:
            - containerPort: 80
  replicas: 3
  selector:
    matchLabels:
      type: gym-webapp

---
apiVersion: v1
kind: Service
metadata:
  name: gymapp-svc
spec:
  type: ClusterIP
  ports:
    - port: 8081
      targetPort: 80
  selector:
    type: gym-webapp
