scenarios/rate-limiting/rate-limiting-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
  labels:
    name: dg-ingress
  annotations:
    nginx.ingress.kubernetes.io/limit-rps: "5"                #This annotation sets a rate limit for requests per second (RPS) for a client (for each IP address).
    nginx.ingress.kubernetes.io/limit-burst-multiplier: "2"   #This annotation defines the burst rate multiplier for handling occasional spikes in request rates.
    nginx.ingress.kubernetes.io/limit-connections: "10"       #This annotation limits the maximum number of concurrent connections per client (IP address).
spec:
  ingressClassName: nginx
  rules:
    - host: doctor.makestudio.info
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: doctorapp-svc
                port:
                  number: 8081
    - host: gym.makestudio.info
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: gymapp-svc
                port:
                  number: 8081
